tests/baselines/reference/funduleOfFunctionWithoutReturnTypeAnnotation.errors.txt
funduleOfFunctionWithoutReturnTypeAnnotation.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== funduleOfFunctionWithoutReturnTypeAnnotation.ts (1 errors) ====
    function fn() {
        return fn.n;
    }
    module fn {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var n = 1;
    }
    